<resources>
    <string name="app_name">Quality Issues Demo</string>
    <string name="voximplant">Voximplant</string>

    <string name="prompt_login">USER@APP.ACCOUNT</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_call_to">CALL TO</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_audio_call">Audio Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="alert_login_failed">Login failed</string>
    <string name="alert_login_failed_account_frozen">Login failed due to account is frozen. Please contact your admin</string>
    <string name="alert_login_failed_internal_error">Login failed due to internal error. Please try again</string>
    <string name="alert_login_failed_timeout">Login failed due to timeout. Please try again</string>
    <string name="alert_login_failed_network_issues">Login failed due to network issues. Please try again</string>
    <string name="alert_title_disconnected">Connection error</string>
    <string name="alert_content_disconnected">Connection to server is lost. Please relogin</string>
    <string name="alert_title_connection_failed">Connection failed</string>
    <string name="alert_content_connection_failed">Connection failed, check your internet connection and try again</string>
    <string name="alert_select_audio_device">Audio device</string>
    <string name="alert_positive_button">OK</string>

    <string name="toast_midcall_operation_failed">%1$s is failed due to %2$s</string>

    <string name="hangup_call">Hangup call</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="mute_audio">Mute/unmute audio</string>
    <string name="speaker_on_off">Enable/disable speakerphone</string>
    <string name="hold_unhold_call">Hold/unhold call</string>
    <string name="more_settings">More settings</string>
    <string name="send_video">Send Video</string>
    <string name="receive_video">Receive Video</string>

    <string name="call_failed">Call is failed</string>
    <string name="incoming_call_from">Incoming call from</string>
    <string name="answer_call">Answer call</string>
    <string name="answer_call_with_video">Answer call with video</string>

    <string name="quality_issue_codec_mismatch">Codec mismatch</string>
    <string name="quality_issue_local_video_degradation">Local video degradation</string>
    <string name="quality_issue_ice_disconnected">Ice disconnected</string>
    <string name="quality_issue_packet_loss">Packet loss</string>
    <string name="quality_issue_no_audio_signal">No audio signal</string>
    <string name="quality_issue_no_audio_receive">No audio receive</string>
    <string name="quality_issue_no_video_receive">No video receive</string>
    <string name="quality_issue_high_media_latency">High latency</string>
    <string name="quality_issue_unknown">Unknown</string>

    <string name="quality_issue_level_none">None</string>
    <string name="quality_issue_level_minor">Minor</string>
    <string name="quality_issue_level_major">Major</string>
    <string name="quality_issue_level_critical">Critical</string>

    <string name="call_service_notification_text">Call in progress</string>
    <string name="endpoint_name">endpoint_name</string>
    <string name="conference">Conference</string>
</resources>
