<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calls.MakeCallActivity"
    android:background="@color/colorWhite">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/call_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_call_to"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/button_audio_call"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/action_audio_call"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/button_video_call"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:srcCompat="@drawable/ic_phone_black_40dp"/>

    <ImageButton
        android:id="@+id/button_video_call"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_image_passive"
        android:contentDescription="@string/action_video_call"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_audio_call"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:srcCompat="@drawable/ic_videocam_black_40dp"/>

</android.support.constraint.ConstraintLayout>